增加正则工具