@@ -91,65 +91,25 @@
 				<version>0.0.3</version>
 				<executions>
 					<execution>
-						<!-- Default configuration for running -->
 						<id>default-cli</id>
 						<configuration>
 							<options>
 								<option>-Djava.library.path=c:\tmp</option>
-								<option>--add-exports</option>
-								<option>javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED</option>
-								<option>--add-exports</option>
-								<option>javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED</option>
-								<option>--add-exports</option>
-								<option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
-								<option>--add-exports</option>
-								<option>javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</option>
-								<option>--add-exports</option>
-								<option>javafx.graphics/com.sun.javafx.css=ALL-UNNAMED</option>
-								<option>--add-exports</option>
-								<option>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
-								
-								<option>--add-exports</option>
-								<option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
-								<option>--add-exports</option>
-								<option>javafx.controls/com.sun.javafx.scene.control.skin=ALL-UNNAMED</option>
-								<option>--add-exports</option>
-								<option>javafx.base/com.sun.javafx.collections=ALL-UNNAMED</option>
+								<option>--add-opens</option> 
+								<option>javafx.graphics/javafx.scene=org.controlsfx.controls</option>
 							</options>
 							<mainClass>org.jflame.devAide.App</mainClass>
 							<executable>D:/Java/jdk-11.0.3/bin/java</executable>
 						</configuration>
 					</execution>
 					<execution>
-						<!-- Configuration for debugging -->
 						<id>debug</id>
 						<configuration>
 							<options>
 								<option>-agentlib:jdwp=transport=dt_socket,server=n,suspend=y,address=localhost:8000</option>
 								<option>-Djava.library.path=c:\tmp</option>
-								
-								<option>--add-exports</option>
-								<option>javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED</option>
-								
-								<option>--add-exports</option>
-								<option>javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED</option>
-								
-								<option>--add-exports</option>
-								<option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
-								
-								<option>--add-exports</option>
-								<option>javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</option>
-								
-								<option>--add-exports</option>
-								<option>javafx.graphics/com.sun.javafx.css=ALL-UNNAMED</option>
-								
-								<option>--add-exports</option>
-								<option>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
-								
-								<option>--add-exports</option>
-								<option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
-								<option>--add-opens</option>
-								<option>javafx.controls/javafx.scene.control.skin=org.controlsfx.controls</option>
+								<option>--add-opens</option> 
+								<option>javafx.graphics/javafx.scene=org.controlsfx.controls</option>
 							</options>
 							<mainClass>org.jflame.devAide.App</mainClass>
 							<executable>D:/Java/jdk-11.0.3/bin/java</executable>
